# Personal-Projects

Social Network/: build.gradle
Social Network 2/: CMakeLists.txt  main.cpp  readme.txt
Social Network 2/Domain/: Friendship.cpp  Friendship.h  List.h  Message.cpp  Message.h  Node.h  Set.cpp  Set.h  Tree.h  User.cpp  User.h
Social Network 2/Repository/: RepositoryFriendship.h  RepositoryMessage.h  RepositoryUser.h
Social Network 2/Service/: ServiceFriendship.cpp  ServiceFriendship.h  ServiceMessage.cpp  ServiceMessage.h  ServiceUser.cpp  ServiceUser.h
Social Network 2/Tests/: Tests.h
Social Network 2/UI/: Ui.cpp  Ui.h
pythonProject/: README.md  cards.json  cars.json  emptyFile.py  main.py  testCarRepository.json  testCarService.json  testClientCardRepository.json  testClientCardService.json  testTransactionsService.json  transactions.json
pythonProject/Domain/: addOperation.py  car.py  carError.py  carValidator.py  clientCard.py  clientCardError.py  clientCardValidator.py  deleteMultipleOperation.py  deleteOperation.py  modifyOperation.py  transaction.py  transactionError.py  transactionValidator.py  undoRedoOperation.py
pythonProject/Repository/: repository.py  repositoryInMemory.py  repositoryJson.py
pythonProject/Service/: carService.py  clientCardService.py  transactionService.py  undoRedoService.py
pythonProject/Tests/: testAll.py  testCarRepository.py  testCarService.py  testClientCardRepository.py  testClientCardService.py  testTransactionsRepository.py  testTransactionsService.py
pythonProject/UserInterface/: console.py
(+24 files in other folders)
